--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # Resend API Configuration
 RESEND_API_KEY=your_resend_api_key_here
+RESEND_FROM_EMAIL=noreply@la-agency-vienna.com
 
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://www.la-agency-vienna.com
 NEXT_PUBLIC_CONTACT_EMAIL=hello@la-agency-vienna.com
 
 # Environment
-NODE_ENV=v8 
+NODE_ENV=production
